tests/compile_fail/invalid_calc_sum_empty.rs
use surgeist_style::{CalcLength, CalcLengthTerm};

fn main() {
    let _empty = CalcLength::Sum(Vec::<CalcLengthTerm>::new());
}
