tests/compile_fail/invalid_calc_sum_empty.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_calc_sum_empty.rs:4:34
  |
4 |     let _empty = CalcLength::Sum(Vec::<CalcLengthTerm>::new());
  |                  --------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `CalcLengthSum`, found `Vec<CalcLengthTerm>`
  |                  |
  |                  arguments to this enum variant are incorrect
  |
  = note: expected struct `surgeist_style::calc::CalcLengthSum`
             found struct `Vec<CalcLengthTerm>`
note: tuple variant defined here
 --> src/calc.rs
  |
  |     Sum(CalcLengthSum),
  |     ^^^
